--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,9 +34,29 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.6
+  cupertino_icons: ^1.0.8
   responsive_framework: ^1.4.0
+  dartz: ^0.10.1
   google_fonts: ^6.2.1
+  rename: ^3.0.2
+  firebase_core: ^3.2.0
+  firebase_auth: ^5.1.2
+  cloud_firestore: ^5.1.0
+  equatable: ^2.0.5
+  flutter_bloc: ^8.1.6
+  get_it: ^7.7.0
+  flutter_secure_storage: ^9.2.2
+  shared_preferences: ^2.2.3
+  flutter_lazy_indexed_stack: ^0.0.6
+  awesome_bottom_bar: ^1.2.4
+  flutter_svg: ^2.0.10+1
+  carousel_slider: ^4.2.1
+  smooth_page_indicator: ^1.2.0+3
+  cached_network_image: ^3.3.1
+  shimmer: ^3.0.0
+  text_scroll: ^0.2.0
+  flutter_rating_bar: ^4.0.1
+  blur: ^4.0.0
 
 dev_dependencies:
   flutter_test:
@@ -47,7 +67,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^3.0.0
+  flutter_lints: ^4.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -63,6 +83,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
+    - assets/fonts/
     - assets/images/movies_list/
 
   # An image asset can refer to one or more resolution-specific "variants", see
@@ -76,20 +97,11 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
-  #
-  # For details regarding fonts from package dependencies,
-  # see https://flutter.dev/custom-fonts/#from-packages
+  fonts:
+    - family: AppIcons
+      fonts:
+        - asset: assets/fonts/app_icons.ttf
+
 
 flutter_assets_generator:
   # Optional. Sets the directory of generated localization files. Provided value should be a valid path on lib dir. Default: generated
@@ -105,4 +117,4 @@ flutter_assets_generator:
   # Optional. Sets the filename split pattern for filename split. Default: [-_]
   filename_split_pattern: "[-_]"
   # Optional. Configuring ignore paths. Default: [],e.g: ["assets/fonts", "assets/images/dark", ...]
-  path_ignore: ["lib"]
+  path_ignore: [ "lib" ]
