--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,7 @@ dependencies:
   text_scroll: ^0.2.0
   flutter_rating_bar: ^4.0.1
   blur: ^4.0.0
+  readmore: ^3.0.0
 
 dev_dependencies:
   flutter_test:
