--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,7 +58,7 @@ dependencies:
   flutter_rating_bar: ^4.0.1
   blur: ^4.0.0
   readmore: ^3.0.0
-
+  intl: ^0.19.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
