Finished The Most Of the App

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,12 @@ dependencies:
   blur: ^4.0.0
   readmore: ^3.0.0
   intl: ^0.19.0
+  gradient_borders: ^1.0.1
+  flutter_animate: ^4.5.0
+  flutter_stripe: ^11.0.0
+  dio: ^5.5.0+1
+  qr_flutter: ^4.1.0
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
